--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@ navigation_weight: 1
 
 <div id="main" class="flexrow">
     <div id="sidebar" class="flexleft">
-        <h3>Assistant Professor</h3>
-        <h3>Department of Mathematics</h3>
-        <h3>Brandeis University</h3>
+        <h3>Algorithms and Machine Learning</h3>
         <img id="headshot" src="{{ "/assets/headshot.jpg" | relative_url }}" />
     </div>
     <div id="page" class="flexright">
@@ -16,36 +14,31 @@ navigation_weight: 1
     <div class="flexwrap">
         <div class="wrapitem">
         <h3>Email</h3>
-        <p>[lastname]@brandeis.edu</p>
-
-        <h3>Office</h3>
-        <p>Goldsmith 313</p>
+        <p>[first and last initial]@johnwilmes.name</p>
         </div>
 
         <div class="stretchitem"></div>
+
         <div class="wrapitem">
-        <h3>Address</h3>
-        <p>
-        Department of Mathematics<br />
-        Brandeis University MS 050<br />
-        415 South St.<br />
-        Waltham, MA 02453
-        </p>
+        <h3>Github</h3>
+        <p><a href="https://github.com/johnwilmes">johnwilmes</a></p>
         </div>
+
         <div class="stretchitem"></div>
 
     </div>
 
-    <h3>Research</h3>
-
-    <p>I do research in algorithms, algebraic combinatorics, and machine
-    learning. Current areas of focus are new training algorithms and provable
-    guarantees for neural networks, and the structure and symmetries of highly
-    regular combinatorial objects.</p>
-
     <h3>Background</h3>
 
-    <p>Previously, I was a postdoc in the Algorithms and Randomness Center at
+    <p>Previously, I was an Assistant Professor of Mathematics at Brandeis University. During my
+    three years I supervised two PhD theses. Wei Lu (jointly supervised by Pengyu Hong) gave the
+    first provable guarantees for training Graph Convoluational (Neural) Network and is now doing
+    machine learning at Meta. Abhishek Gupta's thesis describes a new fastest algorithm for the
+    fundamental problem of permanent approximation; he's now a data scientist at TraceLink. In
+    addition to my research with my students, I am proud of my work developing a new Applied Math
+    major at Brandeis. I left Brandeis in 2021 to relocate to Chicago with my family.</p>
+
+    <p>From 2016-2018, I was a postdoc in the Algorithms and Randomness Center at
     Georgia Tech where I worked on provable guarantees for training neural
     networks and algorithmic problems in matching theory with <a
      href="https://www.cc.gatech.edu/~vempala/">Santosh Vempala</a>
