Edit Brandeis summary

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@ navigation_weight: 1
     <h3>Background</h3>
 
     <p>Previously, I was an Assistant Professor of Mathematics at Brandeis University. During my
-    three years I supervised two PhD theses. Wei Lu (jointly supervised by Pengyu Hong) gave the
-    first provable guarantees for training Graph Convoluational (Neural) Network and is now doing
-    machine learning at Meta. Abhishek Gupta's thesis describes a new fastest algorithm for the
-    fundamental problem of permanent approximation; he's now a data scientist at TraceLink. In
-    addition to my research with my students, I am proud of my work developing a new Applied Math
-    major at Brandeis. I left Brandeis in 2021 to relocate to Chicago with my family.</p>
+    three years, I supervised two PhD theses 
+    (<a href="https://www.linkedin.com/in/wei-lu-365320149">Wei Lu</a> and
+    <a href="https://www.linkedin.com/in/abhishek-gupta-1024/">Abhishek Gupta</a>),
+    received an NSF grant, designed a new Applied Mathematics major and led colleagues in adopting
+    and implementing it, and introduced new courses on optimization, Big Data, and communication
+    skills. I left Brandeis in 2021 to relocate to Chicago with my family.</p>
 
     <p>From 2016-2018, I was a postdoc in the Algorithms and Randomness Center at
     Georgia Tech where I worked on provable guarantees for training neural
-    networks and algorithmic problems in matching theory with <a
+    networks and Markov chain Monte Carlo algorithms with <a
      href="https://www.cc.gatech.edu/~vempala/">Santosh Vempala</a>
     and <a href="https://www.cc.gatech.edu/home/vigoda/">Eric Vigoda</a>.
     </p>
