Contact section on about page with icons

--- a/index.html
+++ b/index.html
@@ -6,27 +6,21 @@ navigation_weight: 1
 
 <div id="main" class="flexrow">
     <div id="sidebar" class="flexleft">
-        <h3>Algorithms and Machine Learning</h3>
+        <h3>Algorithms</h3>
+        <h3>Machine Learning</h3>
         <img id="headshot" src="{{ "/assets/headshot.jpg" | relative_url }}" />
     </div>
     <div id="page" class="flexright">
 
-    <div class="flexwrap">
-        <div class="wrapitem">
-        <h3>Email</h3>
-        <p>[first and last initial]@johnwilmes.name</p>
-        </div>
+    <h3>Contact</h3>
 
-        <div class="stretchitem"></div>
+    <ul id="contact">
+        <li class="email">{% include icons/envelope-solid.svg %}[first and last initial]@johnwilmes.name</li>
+        <li class="github"><a href="https://github.com/johnwilmes">{% include icons/github.svg %}GitHub</a></li>
+        <li class="linkedin"><a href="https://www.linkedin.com/in/john-wilmes/">{% include icons/linkedin.svg %}LinkedIn</a></li>
+    </ul>
 
-        <div class="wrapitem">
-        <h3>Github</h3>
-        <p><a href="https://github.com/johnwilmes">johnwilmes</a></p>
-        </div>
-
-        <div class="stretchitem"></div>
-
-    </div>
+    
 
     <h3>Background</h3>
 
