update resume and about text

--- a/index.html
+++ b/index.html
@@ -21,27 +21,25 @@ navigation_weight: 1
     </ul>
 
     
+    <p>I am an algorithms engineer and data scientist with experience in machine learning and
+    Markov chain Monte Carlo techniques. I'm currently available for work&mdash;get in touch!</p>
 
-    <h3>Background</h3>
+    <h4>Background</h4>
 
-    <p>Previously, I was an Assistant Professor of Mathematics at Brandeis University. During my
-    three years, I supervised two PhD theses 
-    (<a href="https://www.linkedin.com/in/wei-lu-365320149">Wei Lu</a> and
-    <a href="https://www.linkedin.com/in/abhishek-gupta-1024/">Abhishek Gupta</a>),
-    received an NSF grant, designed a new Applied Mathematics major and led colleagues in adopting
-    and implementing it, and introduced new courses on optimization, Big Data, and communication
-    skills. I left Brandeis in 2021 to relocate to Chicago with my family.</p>
+    <p>Over the course of three years as Assistant Professor of Mathematics at Brandeis University, I
+    <ul>
+        <li>designed a new Applied Mathematics major, collaborated across departments to win approval, and led colleagues in adopting
+            and implementing it</li>
+        <li>introduced new courses on optimization, big data, and communication skills to hundreds of students</li>
+        <li>was awarded an NSF grant ("Guarantees for Training Neural Networks") for my machine learning research</li>
+        <li>supervised two PhD theses</li>
+    </ul>
+    I left Brandeis in 2021 to relocate to Chicago with my family.</p>
 
-    <p>From 2016-2018, I was a postdoc in the Algorithms and Randomness Center at
-    Georgia Tech where I worked on provable guarantees for training neural
-    networks and Markov chain Monte Carlo algorithms with <a
-     href="https://www.cc.gatech.edu/~vempala/">Santosh Vempala</a>
-    and <a href="https://www.cc.gatech.edu/home/vigoda/">Eric Vigoda</a>.
-    </p>
-
-    <p>I completed my Ph.D. at the University of Chicago under the supervision
-    of <a href="http://people.cs.uchicago.edu/~laci/">László Babai</a>. My thesis focused on faster algorithms for bottleneck cases
-    of the graph isomorphism problem.</p>
+    <p>Previously, I was a postdoc in the Algorithms and Randomness Center at
+    Georgia Tech where I produced provable guarantees for training neural
+    networks and Markov chain Monte Carlo algorithms. My Ph.D. thesis at the University of Chicago
+    introduced faster algorithms for bottleneck cases of the graph isomorphism problem.</p>
 
         </div>
     </div>
