don't obscure email address

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@ navigation_weight: 1
     <h3>Contact</h3>
 
     <ul id="contact">
-        <li class="email">{% include icons/envelope-solid.svg %}[first and last initial]@johnwilmes.name</li>
+        <li class="email"><a href="mailto:jw@johnwilmes.name">{% include icons/envelope-solid.svg %}jw@johnwilmes.name</a></li>
         <li class="github"><a href="https://github.com/johnwilmes">{% include icons/github.svg %}GitHub</a></li>
         <li class="linkedin"><a href="https://www.linkedin.com/in/john-wilmes/">{% include icons/linkedin.svg %}LinkedIn</a></li>
     </ul>
 
     
-    <p>I am an algorithms engineer and data scientist with experience in machine learning and
+    <p>I am an algorithms researcher and data scientist with experience in machine learning and
     Markov chain Monte Carlo techniques. I'm currently available for work&mdash;get in touch!</p>
 
     <h4>Background</h4>
