about page update

--- a/index.html
+++ b/index.html
@@ -21,18 +21,23 @@ navigation_weight: 1
     </ul>
 
     
-    <p>I am an algorithms researcher and data scientist with experience in machine learning and
-    Markov chain Monte Carlo techniques. I'm currently available for work&mdash;get in touch!</p>
+    <p> I am an experienced algorithms researcher with expertise in Deep Learning and Markov Chain
+    Monte Carlo techniques. My work includes first-in-class training guarantees several neural
+    network architectures and results published in top computer science venues such as NeurIPS,
+    COLT, FOCS, and STOC.</p>
+
+    <p>I'm currently available for work&mdash;get in touch!</p>
 
     <h4>Background</h4>
 
     <p>Over the course of three years as Assistant Professor of Mathematics at Brandeis University, I
     <ul>
+        <li>was awarded an NSF grant ("Guarantees for Training Neural Networks") for my machine learning research</li>
         <li>designed a new Applied Mathematics major, collaborated across departments to win approval, and led colleagues in adopting
             and implementing it</li>
-        <li>introduced new courses on optimization, big data, and communication skills to hundreds of students</li>
-        <li>was awarded an NSF grant ("Guarantees for Training Neural Networks") for my machine learning research</li>
-        <li>supervised two PhD theses</li>
+        <li>supervised two PhD theses, resulting in new best algroithm for approximating
+            permanents, via MCMC techniques, and first training guarantees for graph convolutional
+        neural networks over SBMs</li>
     </ul>
     I left Brandeis in 2021 to relocate to Chicago with my family.</p>
 
